@@ -7,7 +7,8 @@
 ## service    device   role     ping-ip            weight
 #CABLE	      eth0     isp      173.194.43.95      1
 #DSL	      ppp0     isp      173.194.43.95      1
-#LAN	      eth1     lan      
+#LAN1	      eth1     lan      
+#LAN2	      eth2     lan      
 
 ## These options are passed to lsm, among others.
 ## the defaults are shown. To change them, uncomment
@@ -21,3 +22,8 @@
 #min_successive_pkts_rcvd=10
 #long_down_time=120
 
+# :isp = all ISPs
+# :lan = all LANs
+# default routing_group = :lan :isp
+#forwarding_group=LAN1 :isp
+#forwrding_group=LAN2 :isp
